force-app/main/default/objects/Pharma_Project_KPI__c/Pharma_Project_KPI__c.object-meta.xml
<CustomObject>
    <label>Pharma Project KPI</label>
    <nameField>
        <label>KPI Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pharma Project KPIs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>