force-app/main/default/objects/Pharma_Project_KPI__c/fields/Actual_Value__c.field-meta.xml
<CustomField>
    <fullName>Actual_Value__c</fullName>
    <label>Actual Value</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>