force-app/main/default/objects/Pharma_Project_KPI__c/fields/KPI_Name__c.field-meta.xml
<CustomField>
    <fullName>KPI_Name__c</fullName>
    <label>KPI Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>