force-app/main/default/objects/Pharma_Project_KPI__c/fields/Measurement_Period__c.field-meta.xml
<CustomField>
    <fullName>Measurement_Period__c</fullName>
    <label>Measurement Period</label>
    <length>80</length>
    <type>Text</type>
</CustomField>