force-app/main/default/objects/Pharma_Project_KPI__c/fields/Target_Value__c.field-meta.xml
<CustomField>
    <fullName>Target_Value__c</fullName>
    <label>Target Value</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>